# Finance_App

./: .breakpoints  README.md  db.sqlite3  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt
plaid_django/: celery.py  settings.py
plaid_link/: keys.py  serializers.py  tasks.py  urls.py  views.py  views_api.py
templates/: home.html  login.html  oauth.html  signup.html
