[tool.poetry]
name = "repl_nix_PlaidDjangoAssignment"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
amqp="^2.6.0"
asgiref="^3.2.7"
billiard="^3.6.3.0"
celery="^4.4.4"
certifi="^2020.4.5.1"
chardet="^3.0.4"
Django="^3.0.14"
django-rest-framework="^0.1.0"
djangorestframework="^3.11.2"
django-celery-results="^1.2.1"
future="^0.18.2"
idna="^2.9"
importlib-metadata="^1.6.0"
kombu="^4.6.10"
mysqlclient="^1.4.6"
plaid-python="^4.0.0"
pytz="^2020.1"
redis="^3.5.3"
requests="^2.23.0"
six="^1.15.0"
sqlparse="^0.3.1"
urllib3="^1.25.9"
vine="^1.3.0"
zipp="^3.1.0"
nfv-manager = "^1.3.3"
numpy = "^1.23.5"
keyring = "^23.11.0"
tornado = "^6.2"
wincertstore = "^0.2.1"
ordereddict = "^1.1"
HTMLParser = "^0.0.2"
pyOpenSSL = "^22.1.0"
python-ntlm = "^1.1.0"
lockfile = "^0.12.2"
httpsproxy_urllib2 = "^1.0"
xds-protos = "^0.0.11"
hid-converge-ngs = "^2.0.1"
Cython = "^0.29.32"
monotonic = "^1.6"
Brotli = "^1.0.9"
docutils = "^0.19"
spark-nlp = "^4.2.3"
lxml = "^4.9.1"
plaid = "^0.1.7"
noaodatalab = "^2.20.0"
cryptography = "^38.0.3"
no-manylinux = "^3.0.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
